# cdp-ninja

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  ENDPOINT_AUDIT_REPORT.md  LICENSE  MANIFEST.in  Makefile  README.md  REFACTORING_ANALYSIS.md  SECURITY.md  USAGE.md  pyproject.toml  requirements.txt  setup.py  stumblechat.md  what-to-fix.md
.claude/: ninja-background.md  notes.md
agent/: ast-grep-surgeon.md  cdp-ninja-cloud-hiding.md  cdp-ninja-divine-immovable.md  cdp-ninja-hidden-door.md  cdp-ninja-high-tree.md  cdp-ninja-jewel-heart.md  cdp-ninja-jewel-tiger.md  cdp-ninja-nine-demons.md  cdp-ninja-righteous.md  cdp-ninja-tiger-knockdown.md  cdp-ninja.md
agents/: cdp-ninja-cloud-hiding.md  cdp-ninja-divine-immovable.md  cdp-ninja-hidden-door.md  cdp-ninja-high-tree.md  cdp-ninja-jewel-heart.md  cdp-ninja-jewel-tiger.md  cdp-ninja-nine-demons.md  cdp-ninja-righteous.md  cdp-ninja-tiger-knockdown.md
api/: __init__.py  config.py  server.py
api/routes/: __init__.py  browser.py  debugging.py  dom.py  navigation.py
api/utils/: __init__.py  error_reporter.py
cdp_ninja/: __init__.py  config.py  constants.py  server.py
cdp_ninja/core/: __init__.py  cdp_client.py  cdp_pool.py  domain_manager.py  event_manager.py
cdp_ninja/deployment/: __init__.py  cli.py  installers.py  platforms.py  ssh_utils.py  verification.py
cdp_ninja/dom/: __init__.py  coordinates.py
cdp_ninja/examples/: basic_usage.py  debug_nextjs.py
cdp_ninja/interaction/: __init__.py  coordinates.py  mouse.py
cdp_ninja/routes/: __init__.py  accessibility.py  browser.py  cloud_hiding.py  debugging.py  dom.py  dom_advanced.py  error_handling.py  high_tree.py  input_validation.py  js_debugging.py  navigation.py  network_intelligence.py  performance.py  righteous.py  route_utils.py  security.py  stress_testing.py  stress_testing_advanced.py  system.py  tiger_knockdown.py
cdp_ninja/setup/: setup_unix.sh  setup_windows.ps1
cdp_ninja/templates/: __init__.py  accessibility_js.py  concurrency_js.py  javascript.py  performance_js.py  stress_testing_js.py
core/: __init__.py  cdp_client.py  cdp_pool.py
docs/: agent-improvement-strategy.md  esoteric-agent-knowledge.md  ninja-philosophy.md  plan.md
reboot/: INSTALLATION.md  README.md  mass_screenshot.py
scripts/: extract_docs.py
setup/: install.py  setup_unix.sh  setup_windows.ps1
test_env/: pyvenv.cfg
tests/: README.md  run_e2e_tests.py
(+32 files in other folders)
